# Beamline

./: CONTRIBUTING.md  README.md  com.vysp3r.Beamline.local.yml  com.vysp3r.Beamline.yml  meson.build
data/: com.vysp3r.Beamline.desktop.in  com.vysp3r.Beamline.gresource.xml  com.vysp3r.Beamline.gschema.xml  com.vysp3r.Beamline.metainfo.xml.in  com.vysp3r.Beamline.service.in  meson.build
data/css/: style.css
data/icons/: meson.build
po/: POTFILES.in  meson.build
scripts/: build.sh
src/: main.vala  meson.build
src/models/: language.vala  resolution.vala
src/models/games/: game.vala  steam.vala
src/models/launchers/: hgl.vala  launcher.vala  steam.vala
src/utils/: css.vala  filesystem.vala  network.vala  parser.vala  system.vala  vdf.vala  web.vala
src/utils/importers/: hgl.vala  importer.vala  steam.vala
src/widgets/: application.vala  window.vala
src/widgets/bar/: bottom-bar.vala  library-bar.vala  main-box.vala  top-bar.vala
src/widgets/game-row/: main-box.vala
src/widgets/home/: blurred-image.vala  image.vala  main-box.vala
src/widgets/home/bar/: bottom-bar.vala  library-bar.vala  top-bar.vala
src/widgets/home/menu/: connection-box.vala  filter-box.vala  main-box.vala  menu-box.vala  options-box.vala  order-by-box.vala  power-box.vala
src/widgets/home/settings/: interface-box.vala  internet-box.vala  library-box.vala  main-box.vala  power-box.vala
src/widgets/loading/: main-box.vala
src/widgets/menu/: main-box.vala  menu-box.vala  options-box.vala
src/widgets/onboarding/: controller-page.vala  done-page.vala  launchers-page.vala  main-box.vala  setup-page.vala  welcome-page.vala
src/widgets/settings/: audio-box.vala  general-box.vala  interface-box.vala  internet-box.vala  main-box.vala  sidebar-box.vala  system-box.vala
vapi/: config.vapi  upower-glib.vapi
